Deprecate hook name `lint`; add hook name `ruff`
- Added a hook name `ruff` that will be used going forward
- Updated description of `lint` to indicate it is deprecated
- Updated workflow producing these hook configurations
- Updated readme to match examples on PyCQA

--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -1,6 +1,16 @@
+-   id: ruff
+    name: ruff
+    description: 'Run `ruff` for extremely fast Python linting'
+    entry: ruff
+    language: python
+    'types': [python]
+    args: []
+    require_serial: false
+    additional_dependencies: []
+    minimum_pre_commit_version: '0'
 -   id: lint
     name: ruff
-    description: 'Run ruff to lint Python files.'
+    description: 'Deprecated: use hook id `ruff` instead. Planned removal 2022-11-30'
     entry: ruff
     language: python
     'types': [python]
