--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,23 @@ jobs:
           git config user.name 'Github Actions'
           git config --global user.email '41898282+github-actions[bot]@users.noreply.github.com'
 
-      - run: pre-commit-mirror --language python --package-name ruff --entry ruff --id lint --types python --description "Run ruff to lint Python files." .
+      - run: >
+          pre-commit-mirror
+            --language python
+            --package-name ruff
+            --entry ruff
+            --id ruff
+            --types python
+            --description "Run `ruff` for extremely fast Python linting" .
+      
+      # Intended for removal November 2022 (1 month after deprecation)
+      - run: >
+          pre-commit-mirror
+            --language python
+            --package-name ruff
+            --entry ruff
+            --id lint
+            --types python
+            --description "Deprecated: use hook id `ruff` instead. Planned removal 2022-11-30" .
 
       - run: git push origin HEAD:refs/heads/main --tags
