--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -1,10 +1,10 @@
--   id: ruff
-    name: ruff
-    description: "Run 'ruff' for extremely fast Python linting"
-    entry: ruff
-    language: python
-    'types': [python]
-    args: []
-    require_serial: false
-    additional_dependencies: []
-    minimum_pre_commit_version: '0'
+- id: ruff
+  name: ruff
+  description: "Run 'ruff' for extremely fast Python linting"
+  entry: ruff
+  language: python
+  "types": [python]
+  args: []
+  require_serial: false
+  additional_dependencies: []
+  minimum_pre_commit_version: "0"
