--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,6 +3,8 @@ on:
   schedule:
     - cron: "0 */4 * * *"
   workflow_dispatch:
+  repository_dispatch:
+    types: [pypi_release]
 
 jobs:
   build:
