Add alpha formatter support (#50)

--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -1,10 +1,20 @@
--   id: ruff
-    name: ruff
-    description: "Run 'ruff' for extremely fast Python linting"
-    entry: ruff check --force-exclude
-    language: python
-    'types_or': [python, pyi]
-    args: []
-    require_serial: true
-    additional_dependencies: []
-    minimum_pre_commit_version: '2.9.2'
+- id: ruff
+  name: ruff
+  description: "Run 'ruff' for extremely fast Python linting"
+  entry: ruff check --force-exclude
+  language: python
+  "types_or": [python, pyi]
+  args: []
+  require_serial: true
+  additional_dependencies: []
+  minimum_pre_commit_version: "2.9.2"
+- id: ruff-format
+  name: ruff-format
+  description: "Run 'ruff format' for extremely fast Python formatting"
+  entry: ruff format --force-exclude
+  language: python
+  "types_or": [python, pyi]
+  args: []
+  require_serial: true
+  additional_dependencies: []
+  minimum_pre_commit_version: "2.9.2"
