--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -3,17 +3,18 @@
   description: "Run 'ruff' for extremely fast Python linting"
   entry: ruff check --force-exclude
   language: python
-  "types_or": [python, pyi]
+  types_or: [python, pyi]
   args: []
   require_serial: true
   additional_dependencies: []
   minimum_pre_commit_version: "2.9.2"
+
 - id: ruff-format
   name: ruff-format
   description: "Run 'ruff format' for extremely fast Python formatting"
   entry: ruff format --force-exclude
   language: python
-  "types_or": [python, pyi]
+  types_or: [python, pyi]
   args: []
   require_serial: true
   additional_dependencies: []
