--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,3 +4,10 @@ version = "0.0.0"
 dependencies = [
     "ruff==0.0.290",
 ]
+
+[project.optional-dependencies]
+dev = [
+    "packaging~=23.1",
+    "pip-tools>=7.3.0,<8.0.0",
+    "urllib3>=2.0.5,<3.0.0",
+]
