--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,10 +19,11 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: "3.11"
-          cache: pip
-          cache-dependency-path: requirements-dev.txt
 
-      - run: pip install -r requirements-dev.txt
+      - name: download uv
+        run: curl -LsSf https://astral.sh/uv/install.sh | sh
+
+      - run: uv pip install --system -r requirements-dev.txt
 
       - name: set git config
         run: |
