--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
 
       - run: python mirror.py
 
-      - name: Check for unpushed commits
+      - name: check for unpushed commits
         id: check_unpushed
         run: |
           UNPUSHED_COMMITS=$(git log origin/main..HEAD)
@@ -44,12 +44,15 @@ jobs:
             echo "changes_exist=true" >> $GITHUB_ENV
           fi
 
-      - run: |
+      - name: push changes if they exist
+        if: env.changes_exist == 'true'
+        run: |
           git push origin HEAD:refs/heads/main
           git push origin HEAD:refs/heads/main --tags
-        if: env.changes_exist == 'true'
 
-      - run: |
+      - name: create release on new tag if new changes exist
+        if: env.changes_exist == 'true'
+        run: |
           TAG_NAME=$(git describe --tags $(git rev-list --tags --max-count=1))
           echo $TAG_NAME
           gh release create "$TAG_NAME" \
@@ -58,4 +61,3 @@ jobs:
             --latest
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        if: env.changes_exist == 'true'
