--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,3 +10,8 @@ dev = [
     "packaging~=23.1",
     "urllib3>=2.0.5,<3.0.0",
 ]
+
+[tool.mypy]
+mypy_path = "$MYPY_CONFIG_FILE_DIR/src"
+strict = true
+warn_unreachable = true
