--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,16 @@
+[build-system]
+build-backend = "setuptools.build_meta"
+requires = [
+  "setuptools",
+]
+
 [project]
 name = "ruff-pre-commit"
 version = "0.0.0"
+description = "Run the Ruff formatter on Python code blocks in documentation files."
+readme = "README.md"
+requires-python = ">=3.9"
+scripts.ruffen-docs = "ruffen_docs:main"
 dependencies = [
     "ruff==0.8.4",
 ]
