Include all pre-commit options

--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -25,4 +25,8 @@
   description: Run the Ruff formatter on python code blocks in documentation files
   entry: ruffen-docs
   language: python
-  types: [markdown]
+  types_or: [markdown]
+  args: []
+  require_serial: true
+  additional_dependencies: []
+  minimum_pre_commit_version: "2.9.2"
