Rename to ruff format docs

--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -20,10 +20,10 @@
   additional_dependencies: []
   minimum_pre_commit_version: "2.9.2"
 
-- id: ruffen-docs
-  name: ruffen-docs
+- id: ruff-format-docs
+  name: ruff-format-docs
   description: Run the Ruff formatter on python code blocks in documentation files
-  entry: ruffen-docs
+  entry: ruff-format-docs
   language: python
   types_or: [markdown]
   args: []
