--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -25,7 +25,7 @@
   description: Run the Ruff formatter on python code blocks in documentation files
   entry: ruff-format-docs
   language: python
-  types_or: [markdown]
+  types_or: [rst, markdown, python, tex]
   args: []
   require_serial: true
   additional_dependencies: []
