--- a/pyproject.toml
+++ b/pyproject.toml
@@ -116,3 +116,8 @@ required-imports = ["from __future__ import annotations"]
 
 [tool.ruff.lint.pydocstyle]
 convention = "google"
+
+[dependency-groups]
+lint = [
+    "pre-commit>=4.0.1",
+]
