--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ lint = [
 ]
 test = [
     "pytest==8.3.4",
+    "pytest-cov==6.0.0",
 ]
 
 [tool.pytest.ini_options]
@@ -35,6 +36,28 @@ filterwarnings = [
 python_files = "test_*.py"
 testpaths = ["tests"]
 xfail_strict = true
+
+[tool.coverage.report]
+exclude_also = [
+    "if TYPE_CHECKING",
+]
+fail_under = 100
+omit = ["mirror.py"]
+show_missing = true
+skip_covered = true
+
+[tool.coverage.run]
+branch = true
+parallel = true
+source = [
+    "ruff_format_docs",
+    "tests",
+]
+
+[tool.coverage.paths]
+source = [
+    "src",
+]
 
 [tool.mypy]
 mypy_path = "$MYPY_CONFIG_FILE_DIR/src"
