Add flake8 clean block to improve readability

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -57,6 +57,14 @@ repos:
           - urllib3==2.0.5
           - black==24.10.0
 
+  - repo: https://github.com/PyCQA/flake8
+    rev: 7.1.1
+    hooks:
+      - id: flake8
+        additional_dependencies:
+          - flake8-clean-block==0.1.2
+        args: ["--ignore=E,F,W,C90"]
+
   - repo: https://github.com/astral-sh/ruff-pre-commit
     rev: v0.8.4
     hooks:
