Add and prefer the `ruff-check` pre-commit ID

--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -1,6 +1,6 @@
-- id: ruff
-  name: ruff
-  description: "Run 'ruff' for extremely fast Python linting"
+- id: ruff-check
+  name: ruff check
+  description: "Run 'ruff check' for extremely fast Python linting"
   entry: ruff check --force-exclude
   language: python
   types_or: [python, pyi, jupyter]
@@ -10,9 +10,21 @@
   minimum_pre_commit_version: "2.9.2"
 
 - id: ruff-format
-  name: ruff-format
+  name: ruff format
   description: "Run 'ruff format' for extremely fast Python formatting"
   entry: ruff format --force-exclude
+  language: python
+  types_or: [python, pyi, jupyter]
+  args: []
+  require_serial: true
+  additional_dependencies: []
+  minimum_pre_commit_version: "2.9.2"
+
+# Legacy alias
+- id: ruff
+  name: ruff (legacy alias)
+  description: "Run 'ruff check' for extremely fast Python linting"
+  entry: ruff check --force-exclude
   language: python
   types_or: [python, pyi, jupyter]
   args: []
